# cmd/api/main.go
@@ -25,6 +25,11 @@ import (
 // @host localhost:3162
 // @BasePath /api/v1
 // @schemes http https
+
+// @securityDefinitions.apikey BearerAuth
+// @in header
+// @name Authorization
+// @description Type "Bearer" followed by a space and JWT token.
 func main() {
 	app := fiber.New(fiber.Config{
 		AppName: "HouseFlow API",
